test/chainsaw/authpolicy/auto_login_sane_defaults/authpolicy-without-specified-logout-redirect.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  oAuthCredentials:
    clientIDKey: CLIENT_ID
    clientSecretKey: CLIENT_SECRET
    secretRef: oauth-secret
  autoLogin:
    enabled: true
    scopes:
      - openid
  allowedAudiences:
    - value: entraid_server
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
