test/chainsaw/authpolicy/auto_login_sane_defaults/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: auto-login-sane-defaults
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: oauth2-credentials.yaml
        - create:
            file: authpolicy-with-specified-logout-redirect.yaml
        - assert:
            file: authpolicy-with-specified-logout-redirect-assert.yaml
        - update:
            file: authpolicy-with-specified-logout-redirect.yaml
        - assert:
            file: authpolicy-with-specified-logout-redirect-assert.yaml
